# understanding-computation-ocaml

./: dune-project
lib/: algebra.ml  dune
