(lang dune 3.13)

(name understanding-computation-ocaml)

(authors "FizzyElt")

(maintainers "FizzyElt")

(license LICENSE)

(package
 (name understanding-computation-ocaml)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))
